# ai_course_project

./: .gitignore  ANN.ipynb  README.md  baselinedata.ipynb  boost.ipynb  data.ipynb  data_cleaning.ipynb  metrics.py  predict.ipynb  pyproject.toml  requirements.txt  svm.ipynb  tree.ipynb  us-accident-ai-class.ipynb
paper/: PaperForReview.brf  PaperForReview.tex  egbib.bib
